--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,12 @@ yarn-error.log*
 
 # local env files
 .env.local
+.env.development
 .env.development.local
 .env.test.local
+.env.production
 .env.production.local
+.env
 
 # vercel
 .vercel
