--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "4.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen -w",
+    "dev": "graphql-codegen && next",
+    "build": "graphql-codegen && next build",
+    "test": "graphql-codegen && jest"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -14,15 +16,22 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
+    "graphql": "^16.6.0",
     "next": "12.2.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.31.1",
+    "urql": "^3.0.3"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.13.11",
+    "@graphql-codegen/client-preset": "1.1.3",
+    "@graphql-codegen/typed-document-node": "^2.3.6",
+    "@graphql-codegen/typescript-resolvers": "^2.7.6",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.4"
   }
 }
