--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "graphql-codegen && jest"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.12.1",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
