--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.10.12",
     "graphql": "^16.6.0",
     "next": "12.2.6",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.31.1",
@@ -30,6 +31,7 @@
     "@graphql-codegen/typed-document-node": "^2.3.6",
     "@graphql-codegen/typescript-resolvers": "^2.7.6",
     "@types/node": "18.11.9",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.24",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
