--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
+    "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "next": "12.2.6",
     "prismjs": "^1.29.0",
