--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "codegen": "graphql-codegen -w",
     "dev": "next",
     "build": "next build",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.12.1",
@@ -38,6 +39,9 @@
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
     "eslint-config-prettier": "^8.5.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   }
 }
