--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/node": "18.11.9",
     "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.24",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
     "eslint-config-prettier": "^8.5.0",
